# magic-picture

./: .gitignore  magic-picture.cabal  stack.yaml
src/: Main.hs
